Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Nov-2009 Andrew Eddie
 # Fix missing language strings in permissions widget.
 ^ Update MVC for com_redirect.

11-Nov-2009 Mark Dexter
# Fix bug showing current value of request parameters in menu items

11-Nov-2009 Elin Waring
# Fix up comments and URL issues in com_weblinks

10-Nov-2009 Elin Waring
# Miscellaneous cleanup in weblinks, newsfeed, content, language strings
# Tidy up com_menus, delete beez and khepri ini files

10-Nov-2009 Mark Dexter
# Minor HTML validation issue in mod_login

05-Nov-2009 Ron Severdia
^ Template Manager UI cleanup, new images
# Module Manager image fix

05-Nov-2009 Andrew Eddie
 ^ NOTE. Backward incompatible change in the argument list for JEditor::display
 + Added new argument in JEditor::display to take an optional 'id' for the field element (inserted before $params).
 # Corrected bugs in CodeMirror plugin caused by array-based naming of JForm fields (hence addition of id arguments above).
 ! Completed source editing in com_templates.
 # Fixed php notice when editing an article.
 # Fixed some strangeness in the menu edit page with respect to the request variables.
 ^ Refactor backend com_search to MVC; fix search plugins.

04-Nov-2009 Andrew Eddie
 # Fix bugs in list pagination (stepping to page 2+).

03-Nov-2009 Andrew Eddie
 ^ Change dtd of template install files to 1.6.
 ^ Add client columns to template style and templates list; adjust client filters to be able to display all templates.
 ^ Changed template preview handling into JHtml helper.
 + Added file edit features to template detail page.
 ^ Reconfigured template source edit functions.

29-Oct-2009 Ron Severdia
^ Template Manager change, new thumbnail preview

29-Oct-2009 Andrew Eddie