@@ -30,6 +30,7 @@ $ -> Language fix or change
 12-Nov-2009 Andrew Eddie
  # Fix missing language strings in permissions widget.
  ^ Update MVC for com_redirect.
+ ^ Change com_content article view to throw a hard 404 if an article not found (or not published).
 
 11-Nov-2009 Mark Dexter
 # Fix bug showing current value of request parameters in menu items
